--- a/front/src/App.css
+++ b/front/src/App.css
@@ -15,62 +15,6 @@ main{
   max-width: 960px;
   margin: 0 auto;
 }
-header{
-  display:flex;
-  justify-content:space-between;
-  margin-top: 20px;
-  margin-bottom: 50px;
-  align-items: center;
-}
-header a{
-  text-decoration:none;
-  color: inherit;
-}
-header a.logo{
-  font-weight: bold;
-  font-size: 1.5rem;
-  color: orangered;
-}
-header nav{
-  display:flex;
-  gap: 24px;
-}
-
-div.post{
-  display: grid;
-  grid-template-columns: 1fr;
-  gap: 20px;
-  margin-bottom: 30px;
-}
-@media screen and (min-width: 700px) {
-  div.post{
-      grid-template-columns: .9fr 1.1fr;
-  }
-}
-
-div.post div.texts h2{
-  margin:0;
-  font-size: 2rem;
-}
-div.post div.texts a{
-  text-decoration:none;
-  color: inherit;
-}
-div.post p.info{
-  margin:24px 0;
-  color: #888;
-  font-size:1rem;
-  font-weight: bold;
-  display: flex;
-  gap: 10px;
-}
-div.post p.info a.author{
-  color:#333;
-}
-div.post p.summary{
-  margin:10px 0;
-  line-height: 1.8rem;
-}
 
 form.login, form.register{
   max-width: 400px;
@@ -142,7 +86,7 @@ div.edit-row{
   margin-bottom: 20px;
 }
 div.post-page a.edit-btn{
-  background-color: #333;
+  background-color: #FF8749;
   display: inline-flex;
   align-items: center;
   gap: 5px;
