--- a/front/src/pages/RegisterPage.css
+++ b/front/src/pages/RegisterPage.css
@@ -17,9 +17,20 @@
 }
 
 .auth input {
-  padding: 10px;
+  padding: 15px;
   border: none;
   border-bottom: 1px solid gray;
+  border-radius: 30px;
+  outline: none;
+
+}
+.auth .input{
+  padding: 10px;
+  display: flex;
+  flex-direction: row;
+}
+.auth .input .icon{
+  font-size: 1.5rem;
 }
 
 .auth button {
