--- a/front/src/App.css
+++ b/front/src/App.css
@@ -98,3 +98,9 @@ div.post-page a.edit-btn{
 a svg{
   height:20px;
 }
+@media screen and (max-width:1024px) {
+
+}
+@media screen and (max-width:600px) {
+  
+}
