--- a/front/src/components/footer.css
+++ b/front/src/components/footer.css
@@ -1,16 +1,32 @@
 footer {
-    margin: 2rem 0 0 0;
-    padding: 3rem;
-    background-color: teal;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    font-size: 12px;
+  margin: 4rem 0 0 0;
+  padding: 4rem;
+  background-color: teal;
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  gap: 2rem;
+  align-items: center;
+  justify-content: center;
 }
-    footer img {
-      height: 3rem;
-    }
-  footer span {
-    color: white;
-    text-decoration: underline;
+
+footer img {
+  width: 100%;
+}
+
+footer span {
+  color: white;
+  text-decoration: underline;
+  font-size: 0.8rem;
+}
+
+@media screen and (max-width:600px) {
+  footer {
+    padding: 3rem;
+    grid-template-columns: 1fr 2fr;
   }
+  
+  footer span {
+   
+    font-size: 0.6rem;
+  }
+}
