--- a/front/src/index.css
+++ b/front/src/index.css
@@ -6,3 +6,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+@media screen and (max-width:1024px) {
+
+}
+@media screen and (max-width:600px) {
+  
+}
