--- a/front/src/pages/PostPage.css
+++ b/front/src/pages/PostPage.css
@@ -100,6 +100,11 @@
     width: 20%;
     font-size: 0.8rem;
   }
+  .main-answer h4{
+    margin: 1rem;
+    color: #FF8749;
+    font-size: 1rem;
+  }
   /*end postpage*/
   
   
