--- a/front/src/components/post.css
+++ b/front/src/components/post.css
@@ -17,9 +17,8 @@ text-align: justify;
 
 }
 .column{
-  display: grid;
-  grid-template-columns: 2fr 1fr;
-  gap: 2rem;
+  display: flex;
+  flex-direction: column;
   text-align: justify;
 
 }
